--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <div class="left-nav">
-            <img src="../../assets/images/logo.png" alt="">
+            <img src="../../assets/images/new-logo.png" alt="">
             <li routerLinkActive='active-link' > <a routerLink="home" >Home</a></li>
             <li>Favorites</li>
             <li class="user-details" *ngIf="user.isLogged">
