--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -13,7 +13,7 @@
                 flex-direction: column;
 
                 input{
-                    margin-bottom: 10px;
+                    margin-bottom: 20px;
                 }
 
                 .add-ingredient-button{
@@ -34,30 +34,69 @@
     }
 
     .right-container{
+        margin-right: 5%;
         display: flex;
         // position: relative;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         width: 50vw;
+        // border: 1px solid;
+      
+        h1 {
+            margin-top: 0px;
+        }
+        h2 {
+            margin-bottom: 5px;
+        }
+        p {
+            margin: 0px;
+            margin-bottom: 20px;
+            
+        }
+       
+        
+
+        .cooking-steps-wrapper {
+            width: 100%;
+            
+            .cooking-steps {
+                width: 70%;
+            }
+        }
+
+        .cooking-steps-wrapper:nth-child(odd) {
+            // background: linear-gradient(transparent , rgba(128, 128, 128, 0.137),transparent);
+        }
+        
         .right-row-container {
             display: flex;
             flex-direction: row;
+            margin-bottom: 20px;
+            
             .left-row {
                 width: 25vw;
-                background-color: darkkhaki;
+                
                 img{
                     border-radius: 10px;
                     width: 100%;
-                    height: 200px;
+                    height: 300px;
+                    object-fit: cover;
+                    box-shadow: -5px 5px 5px 0 grey;
                 }
+                
+                
             }
             .right-row {
                 width: 25vw;
-                background-color: crimson;
+                
                 ul{
                     width: 100%;
-                    list-style: armenian;
+                    list-style-image: url(../../../assets/images/ingredients-svgrepo-com.svg);
+                    
                     line-break: loose;
+                    li {
+                        font-size: x-small;
+                    }
                 }
             }
             
