--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -1,3 +1,7 @@
+$textcolor: rgb(16, 32, 16);
+$borderColor: rgba(16, 32, 16, 0.596);
+$random: #d4d5d6;
+
 .container-wrapper {
     display: flex;
     flex-direction: row;
@@ -12,9 +16,70 @@
                 display: flex;
                 flex-direction: column;
 
-                input{
-                    margin-bottom: 20px;
+                label {
+                    padding: 5px;
+                    font-size: larger;
+                    color: $textcolor;
                 }
+                input {
+                    border: 0px;
+                    box-shadow: -2px 2px 4px 1px grey;
+                    padding:10px;
+                    background-color: transparent;     
+                }
+
+                input:focus {
+                    outline-color: rgb(134, 184, 134);
+                    border: 0px;
+                }
+
+                input::placeholder {
+                    color: rgba(53, 53, 53, 0.541);
+                }
+
+                .pic-upload {
+                    display: none;
+                }
+                .pic-label{
+                    position: relative;
+                    cursor:pointer;
+                    // border: 1px solid;
+                    margin-top: 25px;
+                    font-size: medium;
+                    color:$textcolor;
+                    padding: 10px;
+                    box-shadow: -2px 2px 4px 1px grey;
+                    
+                    img {
+                        position: absolute;
+                        margin-top: 5px;
+                        height: 100px;
+                        width: 100px;
+                        top:-35px;
+                        right:-120px;
+                        border-radius: 150px;
+                        object-fit: cover;
+                        object-position: center;
+                    }
+                }
+
+                button {
+                    margin-top: 30px;
+                    font-size: larger;
+                    padding: 10px;
+                    border-radius: 5px ;
+                    border: 1px dashed grey;
+                    background-color: rgba(168, 46, 46, 0.445);
+                    color: $borderColor;
+                    box-shadow: -2px 2px 4px 1px grey;
+                    background-color: rgba(81, 151, 81, 0.514);
+                }
+
+                .add-step-button {
+                    margin-top:20px;
+                }
+
+            
 
                 .add-ingredient-button{
                     display: flex;
@@ -25,7 +90,7 @@
                     display: flex;
                     flex-direction: column;
                     textarea{
-                        margin-bottom: 10px;
+                        margin-bottom: 0px;
                     }
                 }
             }
