--- a/src/app/components/add-recipe/add-recipe.component.html
+++ b/src/app/components/add-recipe/add-recipe.component.html
@@ -26,9 +26,9 @@
             placeholder="Please fill ingredients here..."
           />
           <div class="quantity-unit">
-            <label for="">quantity</label>
+            <label for="">Quantity</label>
             <input type="number" formControlName="quantity">
-            <label for="">unit</label>
+            <label for="">Unit</label>
             <select type="number" formControlName="unit">
               <option value="spoon">Spoon</option>
               <option value="grams">Grams</option>
