--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,9 +5,13 @@
             <li routerLinkActive='active-link' > <a routerLink="home" >Home</a></li>
             <li>Favorites</li>
             <li class="user-details" *ngIf="user.isLogged">
-                <p >
+                <!-- <p>
                     {{user.userData?.firstName}}
                     {{user.userData?.lastName}}
+                </p> -->
+                <p>
+                    {{user.userShortData?.firstName}}
+                    {{user.userShortData?.lastName}}
                 </p>
                 <img [src]="user.userShortData?.imgName" alt="">
             </li>
