--- a/src/app/components/add-recipe/add-recipe.component.html
+++ b/src/app/components/add-recipe/add-recipe.component.html
@@ -85,14 +85,15 @@
       </div>
       <div class="right-row">
         <ul>
-          <li *ngFor="let item of ingredients">{{ item }}</li>
+          <li *ngFor="let item of ingredients; index as i">{{ item.ingredient}}: {{item.quantity}} {{item.unit}} <button class="delete-btn" (click)="deleteItem(i)">delete</button></li>
         </ul>
       </div>
     </div>
     <div class="cooking-steps-wrapper" *ngFor="let item of stepsArray; index as i">
-      <p class="cooking-steps" >
+      <p class="cooking-steps" > <button class="steps-delete-btn">delete</button>
         step {{ i + 1 }} - {{ item }}
       </p>
+      
     </div>
   </div>
 </div>
