--- a/src/app/components/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipe-details/recipe-details.component.html
@@ -1,1 +1,16 @@
-<p>recipe-details works!</p>
+<div class="recipe-details-container">
+    <div class="top-container">
+        <div class="left-container">
+            <!-- <img [src]="recipeDetails.recipeImg" alt=""> -->
+        </div>
+        <div class="right-container">
+            <ul *ngFor="let item of ingredients">
+                <li>item</li>
+            </ul>
+        </div>
+    </div>
+    <div class="steps-container">
+
+    </div>
+</div>
+<p>{{recipeDetails | json}}</p>
