added the my recipes card and recipie details cards effect added to registration form

--- a/src/app/components/add-recipe/add-recipe.component.html
+++ b/src/app/components/add-recipe/add-recipe.component.html
@@ -4,9 +4,9 @@
       <form [formGroup]="addRecipe" (ngSubmit)="onSubmit()">
         <label for="">Recipe name</label>
         <input type="text" name="title" formControlName="title" />
-        <label *ngIf="addRecipe.controls['title'].value" class="pic-label" for="inputTag">Upload Image: {{fileName ? fileName :''}}
+        <label *ngIf="addRecipe.controls['title'].value" class="pic-label animation-trigger" for="inputTag">Upload Image: {{fileName ? fileName :''}}
           <svg width="25px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 121.86 122.88" style="enable-background:new 0 0 121.86 122.88" xml:space="preserve"><style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><g><path class="st0" d="M72.09,18.72h42.37c2.05,0,3.89,0.84,5.22,2.18c1.34,1.34,2.18,3.2,2.18,5.22v89.36 c0,2.05-0.84,3.89-2.18,5.22c-1.34,1.34-3.2,2.18-5.22,2.18H24.48c-2.05,0-3.89-0.84-5.22-2.18c-1.34-1.34-2.18-3.2-2.18-5.22 V71.46c2.47,1,5.05,1.78,7.72,2.29v20.28h0.03l0,0C37.72,81.7,46.26,75.61,59.08,65.2c0.05,0.05,0.1,0.1,0.15,0.15 c0.03,0.03,0.03,0.06,0.06,0.06l26.82,31.73l4.1-25.24c0.28-1.62,1.8-2.73,3.42-2.45c0.62,0.09,1.18,0.4,1.62,0.81l18.82,19.77 V27.91c0-0.4-0.16-0.75-0.44-0.99c-0.25-0.25-0.62-0.44-0.99-0.44H74.05C73.64,23.8,72.98,21.21,72.09,18.72L72.09,18.72z M32.79,0 C50.9,0,65.58,14.68,65.58,32.79c0,18.11-14.68,32.79-32.79,32.79C14.68,65.58,0,50.9,0,32.79C0,14.68,14.68,0,32.79,0L32.79,0z M15.37,33.37h11.04v15.76h12.45V33.37h11.36L32.8,16.44L15.37,33.37L15.37,33.37L15.37,33.37z M94.27,35.66 c2.95,0,5.66,1.21,7.58,3.14c1.96,1.96,3.14,4.63,3.14,7.59c0,2.95-1.21,5.66-3.14,7.58c-1.96,1.96-4.63,3.14-7.58,3.14 c-2.95,0-5.66-1.21-7.59-3.14c-1.96-1.96-3.14-4.63-3.14-7.58c0-2.95,1.21-5.65,3.14-7.59C88.65,36.84,91.32,35.66,94.27,35.66 L94.27,35.66L94.27,35.66z"/></g></svg>
-        </label>
+        </label >
         <input 
           *ngIf="addRecipe.controls['title'].value"
           class="pic-upload"
@@ -16,12 +16,12 @@
           (change)="readUrl($event)"
         />
         
-        <label *ngIf="addRecipe.controls['primaryImage'].value" for="">Cooking Time</label>
-        <input *ngIf="addRecipe.controls['primaryImage'].value" type="number" name="cookingTime" formControlName="cookingTime" />
+        <label *ngIf="addRecipe.controls['primaryImage'].value" for="" class="animation-trigger">Cooking Time</label>
+        <input *ngIf="addRecipe.controls['primaryImage'].value" type="number" class="animation-trigger" name="cookingTime" formControlName="cookingTime" />
         
         
 
-        <div *ngIf="addRecipe.controls['cookingTime'].value" class="add-ingredient-button-container">
+        <div *ngIf="addRecipe.controls['cookingTime'].value" class="add-ingredient-button-container animation-trigger">
           <label for="">Ingredient</label>
           <input
             type="text"
@@ -62,11 +62,22 @@
             rows="10"
             formControlName="steps"
           ></textarea>
-          <button class="add-step-button button-hover" [disabled]="!addRecipe.controls['steps'].value" type="button" (click)="addStep()" [ngStyle]="{'background-color': addRecipe.controls['steps'].value ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }">Add steps</button>
+          <button class="add-step-button button-hover"
+            [disabled]="!addRecipe.controls['steps'].value"
+            type="button" (click)="addStep()" 
+            [ngStyle]="{'background-color': addRecipe.controls['steps'].value ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }">
+            Add steps
+          </button>
         </div>
         <!-- <p *ngIf="stepsArray.length === 0">no steps added</p> -->
         <!-- <p>{{addRecipe.valid}}</p> -->
-        <button class="button-hover" [disabled]="stepsArray.length == 0 || ingredients.length == 0" [ngStyle]="{'background-color': stepsArray.length != 0 && ingredients.length != 0 ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }">Submit recipe</button>
+        <button 
+          *ngIf="stepsArray.length != 0"
+          class="button-hover animation-trigger" 
+          [disabled]="stepsArray.length == 0 || ingredients.length == 0" 
+          [ngStyle]="{'background-color': stepsArray.length != 0 && ingredients.length != 0 ? 'rgba(81, 151, 81, 0.514)' : 'rgba(168, 46, 46, 0.445)' }">
+          Submit recipe
+        </button>
       </form>
     </div>
   </div>
