--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <div class="left-nav">
             <img src="../../assets/images/logo.png" alt="">
             <li routerLinkActive='active-link' > <a routerLink="home" >Home</a></li>
-            <li>Favorites</li>
+            
             <li class="user-details" *ngIf="user.isLogged">
                 <!-- <p>
                     {{user.userData?.firstName}}
@@ -32,7 +32,8 @@
     <ul *ngIf="user.isLogged" class="member-nav">
         <li routerLinkActive='active-link'> <a routerLink="/myRecipes">My recipes</a></li>
         <li routerLinkActive='active-link'> <a routerLink="/addRecipe">Add Recipe</a></li>
-        <li routerLinkActive='active-link'> <a routerLink="/editRecipe">Edit Recipe</a></li>
+        <li routerLinkActive='active-link'> <a routerLink="/favorites">Favorites</a></li>
+        <!-- <li routerLinkActive='active-link'> <a routerLink="/editRecipe">Edit Recipe</a></li> -->
     </ul>
     
     
