--- a/src/app/components/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipe-details/recipe-details.component.html
@@ -3,7 +3,7 @@
     <h3>Cooking time : {{recipeDetails['cookingTime']}} minutes</h3>
     <div class="top-container">
         <div class="left-container">
-            <img [src]="recipeDetails['recipe-img']" alt="">
+            <img [src]="recipeDetails['recipe-img']" alt="nana">
         </div>
         
             <div class="right-container">
