--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -75,6 +75,7 @@ $random: #d4d5d6;
                 }
 
                 select {
+                    
                     // appearance: none;
                     outline: none;
                     background-color: transparent;
@@ -124,9 +125,23 @@ $random: #d4d5d6;
                     display: flex;
                     flex-direction: column;
                     textarea{
+                        animation-name: slide;
+                        animation-duration: 2s;
+                        animation-fill-mode: forwards;
                         margin-bottom: 0px;
                     }
                 }
+
+                .animation-trigger {
+                    animation-name: slide;
+                    animation-duration: 1s;
+                    animation-fill-mode: forwards;
+                }
+            }
+
+            @keyframes slide {
+                0% { opacity: 0;}
+                100% { opacity: 1;}
             }
         }
 
