--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,5 @@ body {
     box-sizing: border-box;
     margin: 0;
     background-color: rgba(112, 163, 112, 0.233);
+    font-family: Arial, Helvetica, sans-serif;
 }
