--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -125,24 +125,24 @@ $random: #d4d5d6;
                     display: flex;
                     flex-direction: column;
                     textarea{
-                        animation-name: slide;
-                        animation-duration: 2s;
-                        animation-fill-mode: forwards;
+                        
                         margin-bottom: 0px;
                     }
                 }
 
-                .animation-trigger {
-                    animation-name: slide;
-                    animation-duration: 1s;
-                    animation-fill-mode: forwards;
+                .container-outline {
+                    margin-left: 5px;
+                    padding: 10px;
+                    margin-top: 20px;
+                    box-shadow: -5px 5px 2px 2px grey;
+                    border: 1px solid rgba(128, 128, 128, 0.267);
+                    border-bottom: 0px;
+                    border-left: 0px;
                 }
+                
             }
 
-            @keyframes slide {
-                0% { opacity: 0;}
-                100% { opacity: 1;}
-            }
+            
         }
 
     }
