--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -134,10 +134,15 @@ $random: #d4d5d6;
                     margin-left: 5px;
                     padding: 10px;
                     margin-top: 20px;
-                    box-shadow: -5px 5px 2px 2px grey;
+                    box-shadow: -5px 5px 3px 1px grey;
                     border: 1px solid rgba(128, 128, 128, 0.267);
                     border-bottom: 0px;
                     border-left: 0px;
+                }
+
+                .submit-button {
+                    margin:13px;
+                    margin-top: 25px;
                 }
                 
             }
