--- a/src/app/components/user-recipe-card/user-recipe-card.component.html
+++ b/src/app/components/user-recipe-card/user-recipe-card.component.html
@@ -8,7 +8,7 @@
                 <p>Likes: </p>
                 <p>Dislikes: </p>
                 <div class="buttons-container">
-                    <button>Edit</button>
+                    <button (click)="editRecipe(item.recipeId)">Edit</button>
                     <button>Delete</button>
                     <button>Share</button>
                 </div>
