--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Sofia+Sans+Extra+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     box-sizing: border-box;
     margin: 0;
     background-color: rgba(112, 163, 112, 0.233);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Heebo', sans-serif;
+    font-family: 'Sofia Sans Extra Condensed', sans-serif;
+}
+
+h1 {
+    font-size: calc(20px + 0.52634vw);
 }
