--- a/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/src/app/components/edit-recipe/edit-recipe.component.html
@@ -1,4 +1,5 @@
 <div class="editRecipe">
+  <div class="left-side">
     <div class="form-wrapper">
         <form [formGroup]="editRecipeForm" (ngSubmit)="onSubmit()" >
           <div class="container-outline add-steps-button">
@@ -88,7 +89,7 @@
           </button>
         </form>
       </div>
-
+      </div>
       <div class="right-side">
         <div class="ingredients-list">
           <h1>ingredients</h1>
