--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -11,10 +11,10 @@ nav {
     margin: 0px;
     top: 0;
     color:$textcolor;
-    font-family: 'Heebo', sans-serif;
-    font-family: 'Sofia Sans Extra Condensed', sans-serif;
-    font-weight: 700;
-    font-size: calc(13px + 0.56234vw);
+    // font-family: 'Heebo', sans-serif;
+    // font-family: 'Sofia Sans Extra Condensed', sans-serif;
+    // font-weight: 700;
+    font-size: calc(8px + 0.56234vw);
     border-bottom: $borderColor 1px solid;
 
     
