--- a/src/app/components/edit-recipe/edit-recipe.component.scss
+++ b/src/app/components/edit-recipe/edit-recipe.component.scss
@@ -5,6 +5,8 @@ $random: #d4d5d6;
   margin-top: 100px;
   display: flex;
   justify-content: center;
+  .left-side {
+    width: 30%;
   .form-wrapper {
     
     display: flex;
@@ -146,5 +148,12 @@ $random: #d4d5d6;
         flex-direction: column;
       }
     }
+  }
+}
+  .right-side {
+    width: 60%;
+    // padding-right: 30px;
+    margin-left: 25px;
+    // margin-left: 25px;
   }
 }
