--- a/src/app/components/recipe-home-card/recipe.component.scss
+++ b/src/app/components/recipe-home-card/recipe.component.scss
@@ -1,4 +1,5 @@
 $borderColor: rgb(63, 135, 166);
+$font-size: calc(12px + 0.52634vw);
 .img-container {
     position: relative;
     margin: 10px;
@@ -21,8 +22,8 @@ $borderColor: rgb(63, 135, 166);
     .recipe-name {
         position: absolute;
         text-align: center;
-        font-size: calc(16px + 0.52634vw);
-        font-weight: 700;
+        font-size: calc(12px + 0.52634vw);
+        font-weight: 500;
         color: rgb(7, 59, 7);
         // font-family: Verdana, Geneva, Tahoma, sans-serif;
         background-color: rgba(245, 245, 245, 0.479);
@@ -51,11 +52,11 @@ $borderColor: rgb(63, 135, 166);
             .user-name {
                 position: relative;
                 text-align: center;
-                font-size: large;
-                font-weight: 500;
+                font-size: $font-size;
+                font-weight: 700;
                 color: rgb(7, 59, 7);
                 // font-family: Verdana, Geneva, Tahoma, sans-serif;
-                // font-weight: 500;
+                font-weight: 300;
                 // font-size: small;
                 width: 100%;
                 // padding: 20px;
@@ -99,7 +100,7 @@ $borderColor: rgb(63, 135, 166);
     
         p {
             font-size: medium;
-            font-weight: 600;
+            font-weight: 700;
         }
     }
 
