--- a/src/app/components/user-recipe-card/user-recipe-card.component.html
+++ b/src/app/components/user-recipe-card/user-recipe-card.component.html
@@ -9,7 +9,7 @@
                 <p>Dislikes: </p>
                 <div class="buttons-container">
                     <button (click)="editRecipe(item.recipeId)">Edit</button>
-                    <button>Delete</button>
+                    <button (click)="deleteRecipe(item.recipeId)">Delete</button>
                     <button>Share</button>
                 </div>
             </div>
