--- a/src/app/components/recipe-details/recipe-details.component.scss
+++ b/src/app/components/recipe-details/recipe-details.component.scss
@@ -10,18 +10,57 @@ $border: 1px solid rgba(128, 128, 128, 0.301);
     //     font-size: 2vw;
     // }
     h1 { 
-        font-size: 4em;
+        font-size: calc(62px + 0.5243vw);
         font-weight: 600;
         margin:0px;
         
         .user-name {     
             font-weight: bold;
-            font-size: 0.35em;
+            font-size: calc(26px + 0.5243vw);
             
         }
     }
-    h3 {
-        border-bottom: $border;
+    
+    .preview-table {
+        margin-bottom: 20px;
+        // border: 1px solid rgba(128, 128, 128, 0.363);
+        border-collapse: collapse;
+        margin-top: 10px;
+        max-width: 600px;
+        font-size: calc(13px + 0.5234vw);
+        thead {                
+            tr {
+                td {
+                    margin-left: 20px;
+                    margin-right: 20px;
+                    padding: 5px;
+                    border-right:2px solid rgba(128, 128, 128, 0.363);
+                    // border-left:1px solid rgba(128, 128, 128, 0.363);
+                    text-align: center;
+                }
+
+                td:last-child {
+                    border-right: 0px;
+                }
+            }
+        }
+        tbody {
+            tr{
+                td{
+                    border-right:2px solid rgba(128, 128, 128, 0.363) ;
+                    // border-left:1px solid rgba(128, 128, 128, 0.363) ;
+                    width: 150px;
+                    text-align: center;
+                    padding: 5px;
+                    font-size: larger;
+                   
+                }
+
+                td:last-child {
+                    border-right: 0px;
+                }
+            }
+        }
     }
     .top-container {
         display: flex;
