--- a/src/app/components/add-recipe/add-recipe.component.scss
+++ b/src/app/components/add-recipe/add-recipe.component.scss
@@ -210,6 +210,8 @@ $random: #d4d5d6;
             
             .cooking-steps {
                 width: 70%;
+                margin-top: 2px;
+                border-bottom: 1px solid rgba(128, 128, 128, 0.185);
             }
         }
 
