editing finished and working

--- a/src/app/components/recipe-details/recipe-details.component.html
+++ b/src/app/components/recipe-details/recipe-details.component.html
@@ -33,7 +33,7 @@
         
     </div>
     <div class="steps-container" >
-        <p *ngFor="let step of cookingSteps; index as i">step {{i + 1}}:<br> {{ step}}</p>
+        <p *ngFor="let step of cookingSteps; index as i"><u>step {{i + 1}}</u><br> {{ step}}</p>
     </div>
 </div>
 
